[package]
name = "ping-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surge-ping = "0.8"
hickory-resolver = "0.24.0"
lazy_static = "1.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
reqwest = {version = "0.12",features = ["rustls-tls"]}
